# MurphiEDMC

./: README.md  Readme.md
Benchmarks/models/: TL-C_In_M_data.cpp  TL-C_In_M_data.m  TL-C_In_S_data.cpp  TL-C_In_S_data.m  TL-C_In_S_nodata.cpp  TL-C_NonIn_M_data.m  TL-C_NonIn_M_data_mk.cpp  TL-C_NonIn_M_data_mk.m  TL-C_NonIn_S_data.cpp  TL-C_NonIn_S_nodata.cpp  TL-C_v4.3.1.cpp  flash.m
Benchmarks/states/: TL-C-noninclusive.m  TL-C_v4.3.1.cpp  TL-C_v4.3.1.m  TL-C_v4.3.cpp  TL-C_v4.3.m  const.py  main.py  rule.py  states_In_M_cpp_goalstates.txt  states_In_M_cpp_goalstates_bv.txt  states_In_M_m_invariants.m  states_In_S_cpp_goalstates.txt  states_In_S_m_invariants.m  states_In_visualization.txt  states_NonIn_M_cpp_goalstates.txt  states_NonIn_M_cpp_goalstates_bv.txt  states_NonIn_M_m_invariants.m  states_NonIn_M_v4.3.1_cpp_goalstates.txt  states_NonIn_M_v4.3.1_m_invariants.m  states_NonIn_S_m_invariants.m  (+3 more)
ExperimentLogs/: draw.py  result.csv
Labs/: cache_err.csv  result_all.csv  result_summary.csv  runLab.py
MurphiEDMC/: experiments.md
MurphiFast/: CMakeLists.txt  Readme.txt  run.sh
MurphiFast/include/: mu_epilog.hpp  mu_prolog.hpp
MurphiFast/include/murphi.original/: heuristics.cpp  model_info.cpp  mu_io.cpp  mu_io.hpp  mu_state.cpp  mu_state.hpp  mu_statecl.cpp  mu_statecl.hpp  mu_system.cpp  mu_system.hpp  mu_verifier.cpp  mu_verifier.hpp  priority_queue.cpp  priority_queue.hpp
MurphiFast/src/: Makefile  cpp_code.cpp  cpp_info.cpp  expr.hpp  mu  mu.hpp  stmt.hpp
MurphiFast/test/: bug1.cpp  bug1.m  bug2.cpp  bug2.m  cache_err.cpp  cache_err.m  test.cpp
(+2094 files in other folders)
